# aver-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/task-board/: conftest.py  pyproject.toml
examples/task-board/adapters/: task_board_http.py  task_board_unit.py
examples/task-board/domains/: task_board.py
examples/task-board/src/: app.py  board.py
examples/task-board/tests/: test_task_board.py
src/averspec/: __init__.py  adapter.py  approvals.py  config.py  contract_io.py  correlation.py  domain.py  eventually.py  otlp_receiver.py  protocol.py  protocol_http.py  protocol_playwright.py  pytest_plugin.py  suite.py  telemetry_contract.py  telemetry_mode.py  telemetry_types.py  telemetry_verify.py  trace.py  trace_format.py
src/averspec/cli/: __init__.py  approve.py  init_cmd.py  run.py  scaffold.py  telemetry_cmd.py
tests/: conftest.py  test_task_board.py
tests/acceptance/: adapter.py  conftest.py  domain.py  test_action_trace.py  test_adapter_dispatch.py  test_contract_verification.py  test_coverage_acceptance.py  test_domain_filter_acceptance.py  test_domain_vocabulary.py  test_error_scenarios.py  test_extended_domain_e2e.py  test_extensions_acceptance.py  test_missing_adapter_error.py  test_self.py  test_telemetry_acceptance.py
tests/cli/: test_cli_integration.py  test_init.py  test_run.py  test_telemetry_cmd.py
tests/core/: test_adapt_alias.py  test_adapter.py  test_approvals.py  test_approvals_diff.py  test_approvals_extensibility.py  test_composed_suite.py  test_composed_suite_edges.py  test_contract_io.py  test_correlation.py  test_coverage.py  test_domain.py  test_domain_extension_edges.py  test_domain_extensions.py  test_domain_filtering.py  test_error_enhancement.py  test_eventually.py  test_lifecycle_hooks.py  test_markers.py  test_otlp_receiver.py  test_protocol.py  test_protocol_http.py  test_protocol_playwright.py  test_registry.py  test_registry_parent_chain.py  test_registry_snapshot.py  test_suite.py  test_teardown_errors.py  test_telemetry_contract.py  test_telemetry_mode.py  test_telemetry_trace_format.py  test_telemetry_types.py  test_telemetry_verify_step.py  test_trace.py  test_trace_format.py  test_with_fixture_edges.py
tests/dogfood/: adapter.py  conftest.py  domain.py  test_self.py
tests/smoke/: test_smoke.py
tests/spike_adapters/: task_board_async.py  task_board_unit.py
tests/spike_domains/: task_board.py
