[project]
name = "averspec"
version = "0.0.1"
description = "Domain-driven acceptance testing for Python"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
http = ["httpx>=0.25"]
playwright = ["playwright>=1.40"]
all = ["httpx>=0.25", "playwright>=1.40"]

[project.scripts]
aver = "averspec.cli:main"

[project.entry-points.pytest11]
averspec = "averspec.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/averspec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:cannot collect test class 'Test(Metadata|Completion)':pytest.PytestCollectionWarning",
]
