[project]
name = "task-board-example"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "averspec",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:cannot collect test class 'Test(Metadata|Completion)':pytest.PytestCollectionWarning",
]
